Show borders in bootstrap table

--- a/view/zfc-datagrid/renderer/html/bootstrap-table.phtml
+++ b/view/zfc-datagrid/renderer/html/bootstrap-table.phtml
@@ -58,7 +58,7 @@ use ZfcDatagrid\Column\Style;
     </div>
 </div><!-- End title + actions -->
 
-<table class="table table-striped">
+<table class="table table-striped table-bordered">
     <thead>
         <tr>
             <?php 
