--- a/view/zfc-datagrid/renderer/html/bootstrap-table.phtml
+++ b/view/zfc-datagrid/renderer/html/bootstrap-table.phtml
@@ -1,4 +1,5 @@
 <?php 
+use ZfcDatagrid\Column;
 use ZfcDatagrid\Column\Type;
 use ZfcDatagrid\Column\Style;
 /* @var $paginator \Zend\Paginator\Paginator */
@@ -58,7 +59,13 @@ use ZfcDatagrid\Column\Style;
     </div>
 </div><!-- End title + actions -->
 
-<table class="table table-striped table-bordered">
+<?php 
+$classes = array('table', 'table-striped', 'table-bordered');
+if($this->rowClickLink != '#'){
+    $classes[] = 'table-hover';
+}
+?>
+<table class="<?= implode(' ', $classes); ?>">
     <thead>
         <tr>
             <?php 
@@ -166,15 +173,19 @@ use ZfcDatagrid\Column\Style;
                         }
                     }
                     
-                    if(isset($row[$column->getUniqueId()])): ?>
-                        <td class="<?= implode(',', $classes); ?>" style="<?= implode(';', $styles); ?>">
-                            <?= $this->escapeHtml($row[$column->getUniqueId()]); ?>
-                        </td>
-                    <?php else: ?>
-                        <td class="<?= implode(',', $classes); ?>" style="<?= implode(';', $styles); ?>">
-                            &nbsp;
-                        </td>
-                    <?php endif; ?>
+                    if($column instanceof Column\Image){
+                        $value = ' <a href="#" class="thumbnail"><img src="'.$this->escapeHtmlAttr($row[$column->getUniqueId()]).'" /></a>';
+                    } else{
+                        $value = $this->escapeHtml($row[$column->getUniqueId()]);
+                    }
+                    
+                    if($this->rowClickLink != '#'){
+//                         $value = '<a href="'.$this->rowClickLink.'">'.$value.'</a>';
+                    }
+                    ?>
+                    <td class="<?= implode(',', $classes); ?>" style="<?= implode(';', $styles); ?>">
+                        <?= $value ?>
+                    </td>
                     
                 <?php
                 }
@@ -273,6 +284,6 @@ $pages = $this->paginator->getPages();
         </div>
     </div>
     <div class="span4 text-right">
-        <?= $this->translate('Showing').' '.$this->paginator->getCurrentItemCount().' '.$this->translate('of').' '.$this->paginator->getTotalItemCount().' '.$this->translate('items'); ?>
+        <?= $this->translate('Showing').' '.$paginator->getCurrentItemCount().' '.$this->translate('of').' '.$paginator->getTotalItemCount().' '.$this->translate('items'); ?>
     </div>
 </div><!-- End Pagination -->
