--- a/view/zfc-datagrid/renderer/html/bootstrap-table.phtml
+++ b/view/zfc-datagrid/renderer/html/bootstrap-table.phtml
@@ -6,6 +6,8 @@ use ZfcDatagrid\Column\Style;
 
 <form name="form_<?= $this->gridId; ?>" method="post" action="<?= $this->url(null, array(), array(), true); ?>">
     <input type="submit" class="hidden" name="hiddenSubmit" />
+    <input type="hidden" name="<?= $this->parameterNames['sortColumn']; ?>" value="<?= $this->activeParameters[$this->parameterNames['sortColumn']]; ?>" />
+    <input type="hidden" name="<?= $this->parameterNames['sortDirection']; ?>" value="<?= $this->activeParameters[$this->parameterNames['sortDirection']]; ?>" />
     
 <div class="row-fluid">
     <div class="span3">
