Icon support over Actions -> also for exports possible!

--- a/view/zfc-datagrid/renderer/jqGrid/layout.phtml
+++ b/view/zfc-datagrid/renderer/jqGrid/layout.phtml
@@ -33,6 +33,7 @@ var grid_<?= $this->gridId; ?> = $('#<?= $this->gridId; ?>').jqGrid({
 
 	caption: '<?= $this->title; ?>',
 
+	height: 'auto',
 	autowidth : true,
     forceFit : false,
     shrinkToFit : true,
