--- a/view/zfc-datagrid/toolbar/toolbar.phtml
+++ b/view/zfc-datagrid/toolbar/toolbar.phtml
@@ -9,10 +9,10 @@
     
     <!-- Anything else (filter, ...) -->
     <div class="span6">
-        <div data-toggle="buttons-radio" class="btn-group" id="togglePicturestabs-2_grid">
-            <button value="true" class="btn" type="button">Ja</button>
-            <button value="false" class="btn active" type="button">Nein</button>
-        </div>
+<!--         <div data-toggle="buttons-radio" class="btn-group" id="togglePicturestabs-2_grid"> -->
+<!--             <button value="true" class="btn" type="button">Ja</button> -->
+<!--             <button value="false" class="btn active" type="button">Nein</button> -->
+<!--         </div> -->
     </div>
     
     <!-- Export buttons -->
