Export excel ( + partly PDF)
* UNFINISHED exporting to PDF (with tcpdf)
* exporting excel (with PHPExcel)
* configuration changed

--- a/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
+++ b/view/zfc-datagrid/renderer/bootstrapTable/layout.phtml
@@ -27,7 +27,7 @@ if($this->rowClickAction){
 }
 ?>
 
-<?= $this->partial($this->templateToolbar, array('exportRenderers' => $this->exportRenderers));?>
+<?= $this->partial($this->templateToolbar);?>
 
 <table class="<?= implode(' ', $classes); ?>">
     <thead>
