--- a/view/zfc-datagrid/toolbar/toolbar.phtml
+++ b/view/zfc-datagrid/toolbar/toolbar.phtml
@@ -17,7 +17,7 @@
     
     <!-- Export buttons -->
     <div class="span4 text-right">
-        <?= $this->partial('zfc-datagrid/toolbar/export', array('exportRenderers' => $this->exportRenderers));?>
+        <?= $this->partial('zfc-datagrid/toolbar/export');?>
     </div>
     
 </div>
