--- a/view/zfc-datagrid/toolbar/export.phtml
+++ b/view/zfc-datagrid/toolbar/export.phtml
@@ -3,9 +3,17 @@ $url = $this->url(null, array(), array(), true);
 if($this->overwriteUrl != ''){
     $url = $this->overwriteUrl;
 }
+
+$parametersAdd = '';
+foreach($this->parameters as $name => $value){
+    $parametersAdd .= '&' . $name . '=' . $value;
+}
+
+foreach($this->exportRenderers as $type => $name){
+    $urlExport = $url . '?' . $this->generalParameterNames['rendererType'] . '=' . $type . $parametersAdd;
 ?>
-<?php foreach($this->exportRenderers as $type => $name): ?>
-    <a class="btn" href="<?= $url.'?'.$this->generalParameterNames['rendererType'].'='.$type;?>">
+    <a class="btn" href="<?= $urlExport; ?>">
         <?= $name; ?>
     </a>
-<?php endforeach; ?>
+<?php 
+}
