PhpUnit + PDF export

--- a/view/zfc-datagrid/renderer/jqGrid/layout.phtml
+++ b/view/zfc-datagrid/renderer/jqGrid/layout.phtml
@@ -1,5 +1,5 @@
 <?php 
-$parameterNames = $this->rendererOptions['parameterNames'];
+$parameterNames = $this->optionsRenderer['parameterNames'];
 
 // $sortColumns = explode(',', $this->activeParameters[$parameterNames['sortColumns']]);
 // $sortDirections = explode(',', $this->activeParameters[$parameterNames['sortDirections']]);
